--- a/orientare.html
+++ b/orientare.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <body>
 <p id = "a">Alfa = </p>
@@ -6,5 +6,16 @@
 <p id = "c">Gamma = </p>
 <canvas id="canvas" height="400", width="400">
 <script type="text/javascript" src="orientare.js"></script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<body>
+<p id = "a">Alfa = </p>
+<p id = "b">Beta = </p>
+<p id = "c">Gamma = </p>
+<canvas id="canvas" height="400", width="400">
+<script type="text/javascript" src="beta.js"></script>
 </body>
 </html>
