--- a/orientare.html
+++ b/orientare.html
@@ -9,7 +9,7 @@
 </body>
 </html> -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <body>
 <p id = "a">Alfa = </p>
@@ -17,5 +17,16 @@
 <p id = "c">Gamma = </p>
 <canvas id="canvas" height="400", width="400">
 <script type="text/javascript" src="beta.js"></script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<body>
+<p id="a">Alfa = </p>
+<p id="b">Beta = </p>
+<p id="c">Gamma = </p>
+<canvas id="canvas" height="400", width="400"></canvas>
+<script type="text/javascript" src="gamma.js"></script>
 </body>
 </html>
